// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List with custom item renderer 1`] = `
<div
  className="list"
>
  <div
    className="list-item"
    onMouseDown={[Function]}
  >
    ETH (ballance: 20)
  </div>
  <div
    className="list-item"
    onMouseDown={[Function]}
  >
    ETC (ballance: 2.4)
  </div>
  <div
    className="list-item"
    onMouseDown={[Function]}
  >
    BTC (ballance: 1.05)
  </div>
</div>
`;

exports[`List with simple items and active class name 1`] = `
<div
  className="list active"
>
  <div
    className="list-item"
    onMouseDown={[Function]}
  >
    ETH
  </div>
  <div
    className="list-item"
    onMouseDown={[Function]}
  >
    ETC
  </div>
  <div
    className="list-item"
    onMouseDown={[Function]}
  >
    BTC
  </div>
</div>
`;

exports[`List with simple items and item renderer 1`] = `
<div
  className="list active"
>
  <div
    className="list-item"
    onMouseDown={[Function]}
  >
    name: [object Object]
  </div>
  <div
    className="list-item"
    onMouseDown={[Function]}
  >
    name: [object Object]
  </div>
  <div
    className="list-item"
    onMouseDown={[Function]}
  >
    name: [object Object]
  </div>
</div>
`;

exports[`List without any props 1`] = `null`;
